# nonebot-plugin-htmlrender

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  dockerfile  entrypoint.sh  hello.py  pyproject.toml
.github/workflows/: _test-os-arch.yml  codecov.yml  docker_image.yml  publish.yml
docs/: example.md
example/: .env  .env.dev  bot.py  docker-compose.yaml  pyproject.toml
example/plugins/render/: __init__.py  html2pic.html  utils.py
example/plugins/render/templates/: progress.html.jinja2
nonebot_plugin_htmlrender/: __init__.py  browser.py  config.py  consts.py  data_source.py  date_source.py  install.py  patch.py  process.py  qr_code.py  signal.py  utils.py
nonebot_plugin_htmlrender/templates/: markdown.css  markdown.html  text.css  text.html
tests/: conftest.py  test_browser.py  test_config_custom_validation.py  test_deprecated_decorator.py  test_htmlrender.py  test_install.py  test_process.py  utils.py
tests/templates/: progress.html.jinja2
