[project]
name = "nonebot-plugin-htmlrender"
version = "0.3.3"
description = "通过浏览器渲染图片"
authors = [{ name = "kexue", email = "xana278@foxmail.com" }]
dependencies = [
    "playwright>=1.17.2",
    "nonebot2>=2.2.0",
    "jinja2>=3.0.3",
    "markdown>=3.3.6",
    "Pygments>=2.10.0",
    "python-markdown-math>=0.8",
    "pymdown-extensions>=9.1",
    "aiofiles>=0.8.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/kexue-z/nonebot-plugin-htmlrender"
"Bug Tracker" = "https://github.com/kexue-z/nonebot-plugin-htmlrender/issues"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest-asyncio<1.0.0,>=0.18.1",
    "nonebug @ git+https://github.com/nonebot/nonebug.git",
    "nonebot-adapter-onebot>=2.2.3",
    "fastapi>=0.111.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
