[project]
name = "nonebot-plugin-htmlrender"
version = "0.3.5"
description = "通过浏览器渲染图片"
readme = "README.md"
authors = [{ name = "kexue", email = "x@kexue-cloud.cn" }]
requires-python = ">=3.9,<4.0"
license = { file = "LICENSE" }
dependencies = [
    "aiofiles>=0.8.0",
    "jinja2>=3.0.3",
    "markdown>=3.3.6",
    "nonebot2>=2.2.0",
    "pygments>=2.10.0",
    "pymdown-extensions>=9.1",
    "python-markdown-math>=0.8",
]

[project.urls]
"Homepage" = "https://github.com/kexue-z/nonebot-plugin-htmlrender"
"Bug Tracker" = "https://github.com/kexue-z/nonebot-plugin-htmlrender/issues"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.3.3",
    "nonebug>=0.4.1",
    "pillow>=11.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
