[project]
name = "nonebot-plugin-htmlrender"
version = "0.6.5"
description = "通过浏览器渲染图片"
readme = "README.md"
authors = [{ name = "kexue", email = "x@kexue-cloud.cn" }]
requires-python = ">=3.9,<4.0"
license = { file = "LICENSE" }
dependencies = [
    "aiofiles>=0.8.0",
    "jinja2>=3.0.3",
    "markdown>=3.3.6",
    "nonebot2>=2.4.2",
    "playwright>=1.48.0",
    "pygments>=2.10.0",
    "pymdown-extensions>=9.1",
    "python-markdown-math>=0.8",
]

[project.urls]
"Homepage" = "https://github.com/kexue-z/nonebot-plugin-htmlrender"
"Bug Tracker" = "https://github.com/kexue-z/nonebot-plugin-htmlrender/issues"

[dependency-groups]
dev = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.3.3",
    "nonebug>=0.4.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "pytest-mock>=3.6",
    "pillow>=11.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
#addopts = "--cov=nonebot_plugin_htmlrender --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nonebot_plugin_htmlrender", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.nonebot]
plugins = ["nonebot_plugin_htmlrender"]
